reapply Tomek's fix: Workaround two-way Polymer binding issue for `<textarea>`

--- a/src/juicy-tiles-editor-form.html
+++ b/src/juicy-tiles-editor-form.html
@@ -122,7 +122,7 @@
             <button>✎ inner HTML</button>
           </span>
           <div class="expandable innerHTML">
-            <textarea>{{innerHTML}}</textarea>
+            <textarea on-blur="{{refresh}}">{{innerHTML}}</textarea>
           </div>
         </juicy-popover>
       </template>
